# cat-and-truncate

./: .gitignore  Cargo.toml  README.md  test.bat
.github/workflows/: ci.yml
src/: main.rs  ops.rs  plan.rs
testing/: gen.sh  gen2.sh  gen3.sh  random-test.sh
