[package]
name = "cat-once"
version = "1.0.1"
edition = "2021"
description = "Tool used to cat files in tight disc conditions saving disk space"
authors = ["Scx1332 <sieciech.czajka@golem.network>"]
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.86"
rand = "0.8"
log = "0.4"
env_logger = "0.11.3"
clap = { version = "4.5.9", features = ["derive"] }